# Adverse-Weather-Segmentation

./: .gitignore  README.md  nohup.out  pyproject.toml
configs/: DeepLabV3+.yaml  U-net+Dice Loss.yaml  U-net+classweight.yaml  U-net+focal_loss.yaml  baseline.yaml  ce_dice.yaml  ce_dice_v2  ce_tversky.yaml  ce_tversky_v2  enhance.yaml  enhance_night_only.yaml  final.yaml  night.yaml  nightadapter.yaml  proposed.yaml  proposed_baseline.yaml  proposed_new.yaml  rain.yaml  segformer_baseline.yaml  tversky.yaml  unet_baseline.yaml  unet_ce_focal_dice  unet_ce_focal_tversky  unet_ce_lovasz  unet_ce_smoothed  unet_cetversky_weighted  unet_focal_smoothed  unet_focaltversky  unet_tversky_lovasz
configs/ablations/: 01_baseline_segformer.yaml  02_ce_tversky.yaml  03_color_jitter.yaml  04_color_jitter_gamma.yaml  05_color_jitter_weather_aug.yaml  06_final_all.yaml  06_weather_aug.yaml  07_gamma.yaml  08_weather_aug_gamma.yaml  09_final_all.yaml
configs/augmentation/: fog_contrast.yaml  fog_haze.yaml  jitter.yaml  night_darkening.yaml  night_gamma.yaml  night_noise.yaml  (+9 more)
scripts/: analyze_errors.py  colab_run_augmentation.ipynb  colab_run_baseline.ipynb  colab_run_loss.ipynb  colab_run_proposed.ipynb  final_tune.py  make_enhanced_splits.py  plot_results.py  prepare_dataset.py  preprocess_enhancement.sh  run.sh  run_ablations.sh  run_baseline.sh  run_enhancement.sh  run_final.sh  run_final_tune.sh  run_model.sh  run_night.sh  run_nightadapter.sh  run_proposed.sh  run_proposed_new.sh  run_rain.sh  run_segformer.sh  run_tune.sh  snow.ipynb  tune_segformer.py
tests/: test_normal_ref_experiments.py  test_transforms_crop.py
(+481 files in other folders)
